fix: fix homepage style not fitting the screen

--- a/frontend/src/styles/home.css
+++ b/frontend/src/styles/home.css
@@ -20,10 +20,8 @@ button {
 
 .homeContainer {
     display: flex;
-    flex-direction: row;
-    align-items: flex-start;
     padding: 0px;
-    max-height: 100vh;
+    height: 100vh;
     overflow: hidden;
     background: #17181C;
     scrollbar-width: none;
@@ -34,6 +32,7 @@ button {
 }
 
 .homeNav {
+    flex: 0.5;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -50,6 +49,7 @@ button {
 }
 
 .homeMain {
+    flex: 2;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
